fix(dataset_details): wrap words which can possibly overlap when contributed by a user

--- a/frontend/css/rodi_css.css
+++ b/frontend/css/rodi_css.css
@@ -545,6 +545,10 @@ section#counter-stats {
 ==============================================================================
 */
 
+dl.horizontal dd {
+  word-break: break-all;
+}
+
 @media screen and (min-width: 768px) {
   dl.horizontal {
     display: grid;
